<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tsp.headdb</groupId>
    <artifactId>HeadDB</artifactId>
    <version>5.1.0</version>
    <packaging>jar</packaging>

    <name>HeadDB</name>
    <description>Database with thousands of heads</description>
    <pluginRepositories>
        <pluginRepository>
            <id>bytecode.space</id>
            <url>https://repo.bytecode.space/repository/maven-public/</url>
        </pluginRepository>
    </pluginRepositories>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <build.author>TheSilentPro (Silent)</build.author>
        <maven.build.timestamp.format>dd-MM-yyyy HH:mm:ss</maven.build.timestamp.format>
        <build.timestamp>${maven.build.timestamp}</build.timestamp>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:TheSilentPro/HeadDB.git</connection>
        <developerConnection>scm:git:git@github.com:TheSilentPro/HeadDB.git</developerConnection>
        <url>git@github.com:TheSilentPro/HeadDB.git</url>
    </scm>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>mojang-repo</id>
            <url>https://libraries.minecraft.net/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>ca.bkaw</groupId>
            <artifactId>paper-nms</artifactId>
            <version>1.20.6-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Hard Dependencies (Provided) -->
<!--         <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
 -->        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>4.0.43</version>
            <scope>provided</scope>
        </dependency>
<!--         <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
            <scope>provided</scope>
        </dependency>
 -->
        <!-- Hard Dependencies (Shaded) -->
        <dependency>
            <groupId>tsp.nexuslib</groupId>
            <artifactId>NexusLib</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.TheSilentPro</groupId>
            <artifactId>Warehouse</artifactId>
            <version>b228e4f8b1</version>
        </dependency>
        <dependency>
            <groupId>net.wesjd</groupId>
            <artifactId>anvilgui</artifactId>
            <version>1.9.4-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.github.TheSilentPro</groupId>
            <artifactId>HelperLite</artifactId>
            <version>775582f23b</version>
        </dependency>

        <!-- Soft Dependencies -->
        <!--suppress VulnerableLibrariesLocal -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.5</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>ca.bkaw</groupId>
                <artifactId>paper-nms-maven-plugin</artifactId>
                <version>1.4.4</version>
            </plugin>
            <!-- Compiler -->
            <!-- <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin> -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <paperweight-mappings-namespace>mojang</paperweight-mappings-namespace>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <!-- Shade -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>tsp.headdb.HeadDB</mainClass>
                                </transformer>
                            </transformers>
                            <relocations>
                                <relocation>
                                    <pattern>net.wesjd.anvilgui</pattern>
                                    <shadedPattern>tsp.headdb.core.util.anvilgui</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludeDefaults>false</excludeDefaults>
                                    <includes>
                                        <include>tsp.headdb.core.util.anvilgui</include>
                                    </includes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Javadoc -->
            <!-- <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>javadoc-generate</id>
                        <phase>package</phase>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <show>public</show>
                    <doclint>none</doclint>
                    <additionalDependencies>
                        <additionalDependency>
                            <groupId>org.spigotmc</groupId>
                            <artifactId>spigot-api</artifactId>
                            <version>1.20.2-R0.1-SNAPSHOT</version>
                        </additionalDependency>
                    </additionalDependencies>
                </configuration>
            </plugin> -->
        </plugins>
    </build>

</project>